Fix #641162: LayoutInline propagate position changes to abspos descendants

When inline element changed its position inline->abspos, its out-of-flow descendants did not get layout invalidated.
This change forces relayout of out-of-flow descendants on position style change.

BUG=641162

Review-Url: https://codereview.chromium.org/2342173002
Cr-Commit-Position: refs/heads/master@{#422331}

Former-commit-id: 6825fc78a249ee41df165e2a3376e4fdb9ef504b